objects/BMCServiceDesk__Normalization_Condition__c.object
<CustomObject>
    <description>Stores the conditions defined for normalization rules, including the field name, operator, and field value.</description>
    <fields>
        <fullName>BMCServiceDesk__FKNormalization_Rule__c</fullName>
        <label>Normalization Rule</label>
        <referenceTo>BMCServiceDesk__Normalization_Rule__c</referenceTo>
        <relationshipLabel>Normalization Conditions</relationshipLabel>
        <relationshipName>Normalization_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Field_Value__c</fullName>
        <label>Field Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Operator__c</fullName>
        <label>Operator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Order_Index__c</fullName>
        <label>Order Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Normalization Condition</label>
    <nameField>
        <displayFormat>Condition-{0000}</displayFormat>
        <label>Normalization Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Normalization Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>